--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nativescript-admob",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "Make money with your app by using Google's AdMob ads.",
   "main": "admob",
   "nativescript": {
@@ -21,10 +21,10 @@
     "AdMob",
     "Banner",
     "Interstitial",
-    "Advertisements"
+    "Advertisement"
   ],
   "author": {
-    "name": "Telerik / Eddy Verbruggen",
+    "name": "Eddy Verbruggen",
     "email": "eddyverbruggen@gmail.com"
   },
   "license": {
